@@ -1,0 +1,1 @@
+ocamlfind ocaml -init /home/yoric/usr/local/godi/lib/ocaml/site-lib/batteries/top.ml $@
