@@ -1,0 +1,1 @@
+ocamlfind ocamlc -syntax camlp4o -package batteries.pa_openin.syntax,batteries.pa_where.syntax,batteries.pa_batteries.syntax -package batteries -linkpkg $@
