@@ -1,2 +1,0 @@
-This directory contains tools which are meant to be used only
-in the toplevel.
